--- a/doc/bugs/Http_error_500_when_using_mercurial_backend.mdwn
+++ b/doc/bugs/Http_error_500_when_using_mercurial_backend.mdwn
@@ -26,4 +26,4 @@ Here is a quick patch, partialy copying the svn backend.
 > removes that info when getting the RecentChanges info. Since mercurial
 > does not do that, it seemed better to me to test for an empty message and
 > set it to a dummy commit string, which I've [[done]]. --[[Joey]]
->>Thanks for the correct fix, Joey.
+>>Thanks for the correct fix, Joey. --hb
