web commit by LukClaes: Add my blog

--- a/doc/ikiwikiusers.mdwn
+++ b/doc/ikiwikiusers.mdwn
@@ -48,6 +48,7 @@ Personal sites and blogs
 * I keep my personal project notes and specs in a private ikiwiki - it's the perfect tool for this task. - [the daniel](http://neoglam.com)
 * [Schabis blaue Seite](http://schabi.de) - I abuse ikiwiki as blog/cms combo, and will migrate all existing content into ikiwiki eventually.
 * [Ben Coffey's blog and personal site](http://inelegant.org/).
+* [blog of LukClaes](http://zomers.be/~luk/blog/).
 
 Please feel free to add your own ikiwiki site!
 
