--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ikiwiki (1.48) UNRELEASED; urgency=low
+ikiwiki (1.48) unstable; urgency=low
 
   * Fix link() PageSpecs to not just look at the raw link text, but at where
     that given link points based on the page doing the linking. Note that this
