* Add a templates page to the basewiki. It will automatically list all   available templates. Rename the old templates page to wikitemplates. * Include the note template in the basewiki. * Add a popup template in the basewiki. CSS based on some by Martin Krafft. * Make the note, popup, and plugin templates detect missing variables and be   self-documenting, listing the available variables.

--- a/doc/features.mdwn
+++ b/doc/features.mdwn
@@ -68,9 +68,9 @@ you would care to syndicate.
 ## Valid html and [[css]]
 
 ikiwiki aims to produce 
-[valid XHTML 1.0](http://validator.w3.org/check?url=referer).
-ikiwiki generates html using [[templates]], and uses [[css]], so you can 
-change the look and layout of all pages in any way you would like.
+[valid XHTML 1.0](http://validator.w3.org/check?url=referer). ikiwiki
+generates html using [[templates|wikitemplates]], and uses [[css]], so you
+can change the look and layout of all pages in any way you would like.
 
 ## [[Plugins]]
 
