--- a/doc/plugins/search.mdwn
+++ b/doc/plugins/search.mdwn
@@ -5,8 +5,8 @@ This plugin is included in ikiwiki, but is not enabled by default. It adds
 full text search to ikiwiki, using the [[HyperEstraier]] engine.
 
 It's possible to configure HyperEstraier via one of ikiwiki's
-[[templates]], but for most users, no configuration should be needed aside
-from enabling the plugin.
+[[templates|wikitemplates]], but for most users, no configuration should be
+needed aside from enabling the plugin.
 
 This plugin has a configuration option. To change the path to estseek.cgi,
 set `--estseek=/path/to/estseek.cgi`
