--- a/doc/todo/html.mdwn
+++ b/doc/todo/html.mdwn
@@ -1,4 +1,4 @@
 Create some nice(r) stylesheets.
 
 Should be doable w/o touching a single line of code, just
-editing the [[templates]] and/or editing [[style.css]].
+editing the [[wikitemplates]] and/or editing [[style.css]].
