--- a/doc/templates/note.mdwn
+++ b/doc/templates/note.mdwn
@@ -1,3 +1,11 @@
 <span class="notebox">
 <TMPL_VAR text>
 </span>
+<TMPL_UNLESS NAME="text">
+Use this template to insert a note into a page. The note will be styled to
+float to the right of other text on the page. This template has one
+parameter:
+<ul>
+<li>`text` - the text to display in the note
+</ul>
+</TMPL_UNLESS>
