--- a/doc/usage.mdwn
+++ b/doc/usage.mdwn
@@ -109,8 +109,8 @@ configuration options of their own.
 
 * --templatedir
 
-  Specify the directory that the page [[templates]] are stored in. Default
-  is `/usr/share/ikiwiki/templates`, or another location as configured at
+  Specify the directory that the page [[templates|wikitemplates]] are stored in.
+  Default is `/usr/share/ikiwiki/templates`, or another location as configured at
   build time. If the templatedir is changed, missing templates will still
   be searched for in the default location as a fallback.
 
