--- a/doc/wikitemplates.mdwn
+++ b/doc/wikitemplates.mdwn
@@ -49,5 +49,5 @@ be customised with templates, although most of it can, by creating these
 templates. Without the templates, CGI::FormBuilder creates the page bodies
 by itself.
 
-The [[plugins/template]] plugin also uses templates, though those templates
-are stored in the wiki.
+The [[plugins/template]] plugin also uses templates, though those
+[[templates]] are stored in the wiki.
