--- a/debian/changelog
+++ b/debian/changelog
@@ -11,8 +11,10 @@ ikiwiki (1.49) UNRELEASED; urgency=low
   * Add a popup template in the basewiki. CSS based on some by Martin Krafft.
   * Make the note, popup, and plugin templates detect missing variables and be
     self-documenting, listing the available variables.
+  * Hide excess backlinks and expand using CSS trick; control quantiy via
+    the numbacklinks setting.
 
- -- Joey Hess <joeyh@debian.org>  Sat, 31 Mar 2007 02:23:46 -0400
+ -- Joey Hess <joeyh@debian.org>  Sat, 31 Mar 2007 04:27:08 -0400
 
 ikiwiki (1.48) unstable; urgency=low
 
