web commit by hb: test

--- a/doc/bugs/Http_error_500_when_using_mercurial_backend.mdwn
+++ b/doc/bugs/Http_error_500_when_using_mercurial_backend.mdwn
@@ -1,3 +1,5 @@
+This is [[done]]
+
 The mercurial backend is broken when no changelog message is given.
 
 Here is a quick patch, partialy copying the svn backend. 
