--- a/doc/bugs.mdwn
+++ b/doc/bugs.mdwn
@@ -1,4 +1,4 @@
-This is ikiwiki's bug list. Link bugs to [[bugs/done]] when done.
+This is ikiwiki's bug list. Link bugs to [[bugs/done]] when done..
 
 Also see the [Debian bugs](http://bugs.debian.org/ikiwiki).
 
