--- a/doc/usage.mdwn
+++ b/doc/usage.mdwn
@@ -257,6 +257,10 @@ configuration options of their own.
 
   Log to syslog(3).
 
+* --usedirs, --no-usedirs
+
+  Create output files named page/index.html instead of page.html.
+
 * --w3mmode, --no-w3mmode
 
   Enable [[w3mmode]], which allows w3m to use ikiwiki as a local CGI script,
