use urlto; htmlpage is no longer appropriate here

--- a/debian/NEWS
+++ b/debian/NEWS
@@ -1,3 +1,10 @@
+ikiwiki (1.49) unstable; urgency=low
+
+  Third-party plugins that use htmlpage() may need changes to support the
+  new "userdir" option.
+
+ -- Joey Hess <joeyh@debian.org>  Sun, 01 Apr 2007 16:20:09 -0400
+
 ikiwiki (1.47) unstable; urgency=low
  
   Due to a security fix, wikis that have the htmlscrubber enabled can no
