web commit by JoshTriplett: s/parens/square brackets/

--- a/doc/templates/popup.mdwn
+++ b/doc/templates/popup.mdwn
@@ -9,7 +9,7 @@ anything, even images or a whole little wiki page, but should not be too
 large for good usability.
 </ul>
 Note that browsers that do not support the CSS will display the popup
-inline in the page, inside parens.
+inline in the page, inside square brackets.
 </TMPL_UNLESS>
 <span class="popup"><TMPL_VAR mouseover>
 <span class="paren">[</span><span class="balloon"><TMPL_VAR popup></span><span class="paren">]</span>
