--- a/doc/todo/Autogenerate_a_.htaccess_file_with_redirects_from_foo.html_to_corresponding_index.html.mdwn
+++ b/doc/todo/Autogenerate_a_.htaccess_file_with_redirects_from_foo.html_to_corresponding_index.html.mdwn
@@ -1,1 +1,4 @@
 Now that ikiwiki supports using page/index.html rather than page.html, how about some mechanism to automatically generate a .htaccess file with "Redirect permanent" lines for each such page?
+
+> I was thinking of using an apache RewriteRule for this, haven't written
+> one yet though. --[[Joey]]
