* Fix a bug in the img plugin that caused thumbnailed files to not be * Make the OpenID library a reccommendation of the Debian package, rather   than just a suggests, since OpenID is enabled by default.

--- a/doc/bugs/debian_package_doesn__39__t_pull_in_packages_required_for_openid.mdwn
+++ b/doc/bugs/debian_package_doesn__39__t_pull_in_packages_required_for_openid.mdwn
@@ -3,3 +3,7 @@ I installed version 1.48-1 of Debian package of ikiwiki.  When I went to login w
 I assume that these should be pulled in by default since OpenID is enabled by default?
 
 -- Adam.
+
+> I'm going to promote it from a Suggests to a Recommends, that should get
+> it installed by default and still let it not be installed by users who
+> don't want it. [[done]] --[[Joey]]
