--- a/debian/changelog
+++ b/debian/changelog
@@ -17,10 +17,12 @@ ikiwiki (1.49) UNRELEASED; urgency=low
     on and supported creating it (especially Tumov). This adds a "usedirs"
     option that makes ikiwiki use foo/index.html instead of foo.html as
     output page names. It is not yet enabled by default.
-  * Fix a big in the img plugin that caused thumbnailed files to not be
+  * Fix a bug in the img plugin that caused thumbnailed files to not be
     tracked properly.
+  * Make the OpenID library a reccommendation of the Debian package, rather
+    than just a suggests, since OpenID is enabled by default.
 
- -- Joey Hess <joeyh@debian.org>  Sun, 01 Apr 2007 15:37:17 -0400
+ -- Joey Hess <joeyh@debian.org>  Tue, 03 Apr 2007 20:40:27 -0400
 
 ikiwiki (1.48) unstable; urgency=low
 
