--- a/doc/roadmap.mdwn
+++ b/doc/roadmap.mdwn
@@ -35,7 +35,7 @@ Released 29 April 2006.
 features and make other changes to the default configuration. Some things
 I'm considering:
 
-* Makeng OpenID the default auth method.
+* Making OpenID the default auth method.
 * Dropping GlobLists. However, they can lurk in preferences settings in wikis,
   which may make getting rid of them hard, and it may be worth keeping them
   so users can list pages without anding them together.
