--- a/doc/todo/Autogenerate_a_.htaccess_file_with_redirects_from_foo.html_to_corresponding_index.html.mdwn
+++ b/doc/todo/Autogenerate_a_.htaccess_file_with_redirects_from_foo.html_to_corresponding_index.html.mdwn
@@ -10,5 +10,7 @@ Now that ikiwiki supports using page/index.html rather than page.html, how about
 	RewriteCond $1 !^/~
 	RewriteCond $1 !^/doc/
 	RewriteCond $1 !^/cgi-bin/
+	RewriteCond $1 !^/index
 	RewriteRule (.+).html $1/ [R]
+
 	#RewriteRule /~family/(.+).html /~family/$1/ [R]
