--- a/doc/smileys.mdwn
+++ b/doc/smileys.mdwn
@@ -20,6 +20,7 @@ Just write the text of a smiley to display it.
 * \:(	[[smileys/sad.png]]
 * \:-(	[[smileys/sad.png]]
 * \:-?	[[smileys/tongue.png]]
+* \:-P	[[smileys/tongue.png]]
 * \:o	[[smileys/redface.png]]
 * \|)	[[smileys/tired.png]]
 * \|-)	[[smileys/tired.png]]
