--- a/doc/patchqueue.mdwn
+++ b/doc/patchqueue.mdwn
@@ -1,8 +1,8 @@
 Since we have enough people working on ikiwiki to be dangerous, or at least
-to duplicate work without coordination, and since Joey is still the only
-one committing directly to the tree, here's a queue of suggested patches.
+to duplicate work without coordination, and since few people have direct
+commit access to the tree, here's a queue of suggested patches.
 Feel free to either copy the patch inline, or link to one elsewhere (or nag
-Joey to open up anonymous svn access to this wiki so you can check in the
+[[Joey]] to open up anonymous svn access to this wiki so you can check in the
 patches directly).
 
-[[inline pages="patchqueue/* and !patchqueue/done and !link(patchqueue/done) and !*/Discussion" rootpage="patchqueue" archive="yes"]]
+[[inline pages="patchqueue/* and !*/Discussion" rootpage="patchqueue" archive="yes"]]
