--- a/debian/changelog
+++ b/debian/changelog
@@ -22,8 +22,9 @@ ikiwiki (1.49) UNRELEASED; urgency=low
   * Make the OpenID library a reccommendation of the Debian package, rather
     than just a suggests, since OpenID is enabled by default.
   * Fix a bug that caused link(foo) to succeed if page foo did not exist.
+  * Fix tags to page names that contain special characters.
 
- -- Joey Hess <joeyh@debian.org>  Wed, 04 Apr 2007 16:55:36 -0400
+ -- Joey Hess <joeyh@debian.org>  Wed, 04 Apr 2007 17:06:59 -0400
 
 ikiwiki (1.48) unstable; urgency=low
 
