web commit by JoshTriplett: Add :-\

--- a/doc/smileys.mdwn
+++ b/doc/smileys.mdwn
@@ -12,6 +12,7 @@ Just write the text of a smiley to display it.
 * \;)	[[smileys/smile4.png]]
 * \;-)	[[smileys/smile4.png]]
 * \:\	[[smileys/ohwell.png]]
+* \:-\	[[smileys/ohwell.png]]
 * \:/	[[smileys/ohwell.png]]
 * \:-/	[[smileys/ohwell.png]]
 * \>:>	[[smileys/devil.png]]
