* Add neutral smileys ":|" and ":-|", and question icon smiley "(?)",   with images taken from phpBB (GPL) and converted with gif2png.

--- a/doc/smileys.mdwn
+++ b/doc/smileys.mdwn
@@ -15,6 +15,8 @@ Just write the text of a smiley to display it.
 * \:-\	[[smileys/ohwell.png]]
 * \:/	[[smileys/ohwell.png]]
 * \:-/	[[smileys/ohwell.png]]
+* \:|	[[smileys/neutral.png]]
+* \:-|	[[smileys/neutral.png]]
 * \>:>	[[smileys/devil.png]]
 * \X-(	[[smileys/angry.png]]
 * \<:(	[[smileys/frown.png]]
@@ -32,6 +34,7 @@ Just write the text of a smiley to display it.
 * \(!)	[[smileys/idea.png]]
 * \[!]	[[smileys/attention.png]]
 * \/!\	[[smileys/alert.png]]
+* \(?)	[[smileys/question.png]]
 * \{*}	[[smileys/star_on.png]]
 * \{o}	[[smileys/star_off.png]]
 * \{1}  [[smileys/prio1.png]]
