--- a/debian/changelog
+++ b/debian/changelog
@@ -27,8 +27,10 @@ ikiwiki (1.49) UNRELEASED; urgency=low
 
   [ Josh Triplett ]
   * Use pngcrush and optipng on all PNG files.
+  * Add neutral smileys ":|" and ":-|", and question icon smiley "(?)",
+    with images taken from phpBB (GPL) and converted with gif2png.
 
- -- Joey Hess <joeyh@debian.org>  Thu, 05 Apr 2007 17:36:14 -0700
+ -- Joey Hess <joeyh@debian.org>  Thu, 05 Apr 2007 19:52:01 -0700
 
 ikiwiki (1.48) unstable; urgency=low
 
