--- a/debian/changelog
+++ b/debian/changelog
@@ -29,8 +29,13 @@ ikiwiki (1.49) UNRELEASED; urgency=low
   * Use pngcrush and optipng on all PNG files.
   * Add neutral smileys ":|" and ":-|", and question icon smiley "(?)",
     with images taken from phpBB (GPL) and converted with gif2png.
+  * Improvements to Description in debian/control:
+    * Note that some plugins have additional dependencies, found among the
+      Recommends and Suggests.
+    * ikiwiki supports both RSS and Atom feeds.
+    * Fix typos.
 
- -- Joey Hess <joeyh@debian.org>  Thu, 05 Apr 2007 19:52:01 -0700
+ -- Joey Hess <joeyh@debian.org>  Thu, 05 Apr 2007 20:09:26 -0700
 
 ikiwiki (1.48) unstable; urgency=low
 
