--- a/debian/changelog
+++ b/debian/changelog
@@ -34,6 +34,7 @@ ikiwiki (1.49) UNRELEASED; urgency=low
       Recommends and Suggests.
     * ikiwiki supports both RSS and Atom feeds.
     * Fix typos.
+  * Add Homepage field.
 
  -- Joey Hess <joeyh@debian.org>  Thu, 05 Apr 2007 20:09:26 -0700
 
