* Add XS-Vcs-Browser field.

--- a/debian/changelog
+++ b/debian/changelog
@@ -35,6 +35,7 @@ ikiwiki (1.49) UNRELEASED; urgency=low
     * ikiwiki supports both RSS and Atom feeds.
     * Fix typos.
   * Add Homepage field.
+  * Add XS-Vcs-Browser field.
 
  -- Joey Hess <joeyh@debian.org>  Thu, 05 Apr 2007 20:09:26 -0700
 
