Fix typos: s/dontate/donate/, s/paypal/PayPal/.

--- a/doc/tipjar.mdwn
+++ b/doc/tipjar.mdwn
@@ -7,7 +7,7 @@ ikiwiki. While ikiwiki.net seems to already be parked, some others are
 available. I'd like to get at least enough to register it for 5 years
 upfront (probably 60 euros).
 
-<a href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=joey%40kitenet%2enet&item_name=ikiwiki&no_shipping=1&cn=Comments%3f&tax=0&currency_code=USD&lc=US&bn=PP%2dDonationsBF&charset=UTF%2d8"><img src="https://www.paypal.com/en_US/i/btn/x-click-but04.gif" alt="dontate with PayPal" /></a>
+<a href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=joey%40kitenet%2enet&item_name=ikiwiki&no_shipping=1&cn=Comments%3f&tax=0&currency_code=USD&lc=US&bn=PP%2dDonationsBF&charset=UTF%2d8"><img src="https://www.paypal.com/en_US/i/btn/x-click-but04.gif" alt="donate with PayPal" /></a>
 
 If you would like your donation listed here, let [[Joey]] know. Thanks to
 the following people for their kind contributions:
@@ -15,4 +15,4 @@ the following people for their kind contributions:
 * James Westby
 * Kyle S MacLea
 
-(Note that this page is locked to prevent anyone from tampering with the paypal button.)
+(Note that this page is locked to prevent anyone from tampering with the PayPal button.)
