--- a/doc/contact.mdwn
+++ b/doc/contact.mdwn
@@ -2,7 +2,7 @@ The ikiwiki project strongly encourages collaboration through ikiwiki itself,
 and thus does not have a mailing list.  Anyone can create an account on
 ikiwiki's own wiki. ikiwiki provides a [[bug_tracker|bugs]], a
 [[TODO_list|TODO]], and "discussion" sub-pages for every page. ikiwiki
-developers monitor RecentChanges closely, via the webpage, email, and
-[CIA](http://cia.navi.cx), and respond in a timely fashion.
+developers monitor RecentChanges closely, via the webpage, email,
+[CIA](http://cia.navi.cx), and IRC, and respond in a timely fashion.
 
 You could also drop by the IRC channel `#ikiwiki` on OFTC (`irc.oftc.net`).
