--- a/doc/contact.mdwn
+++ b/doc/contact.mdwn
@@ -5,4 +5,5 @@ ikiwiki's own wiki. ikiwiki provides a [[bug_tracker|bugs]], a
 developers monitor RecentChanges closely, via the webpage, email,
 [CIA](http://cia.navi.cx), and IRC, and respond in a timely fashion.
 
-You could also drop by the IRC channel `#ikiwiki` on OFTC (`irc.oftc.net`).
+You could also drop by the IRC channel `#ikiwiki` on
+[OFTC](http://www.oftc.net/) (`irc.oftc.net`).
