--- a/doc/tips.mdwn
+++ b/doc/tips.mdwn
@@ -18,3 +18,12 @@ I should mention that I also have a
 write blog posts in a text editor. The first line I enter is used as the
 title, and it automatically comes up with a unique page name based on the
 title and handles all the details of posting to my blog. --[[Joey]]
+
+## using the web interface with a real text editor
+
+If you use Firefox or Iceweasel, the [It's All
+Text](https://addons.mozilla.org/en-US/firefox/addon/4125) extension allows
+you to use a real text editor like Emacs or Vim to edit the contents of text
+areas.  This allows you to edit ikiwiki pages with a real text editor through
+the ikiwiki web interface, rather than only with direct commit
+access. --[[JoshTriplett]]
