web commit by JoshTriplett: Fix incomplete sentence.  Sign.

--- a/doc/todo/Account_moderation.mdwn
+++ b/doc/todo/Account_moderation.mdwn
@@ -1,5 +1,6 @@
 The account creation process in the default [[passwordauth]] plugin could
-support account moderation by an administrator.  New account signups could
+support account moderation by an administrator.  New account signups would
+go into a queue for approval by an administrator.
 
 (Random, potentially infeasible idea: save their edits and apply them if
 the account gets approved.)
@@ -8,5 +9,7 @@ the account gets approved.)
 simplistic anti-spam measure.  (Some wikis edited by a particular group use
 an account creation password as an "ask an existing member to get an account"
 system.)
+
+--[[JoshTriplett]]
 
 [[tag soc]]
