web commit by JoshTriplett: Fix link to passwordauth.

--- a/doc/todo/Account_moderation.mdwn
+++ b/doc/todo/Account_moderation.mdwn
@@ -1,12 +1,12 @@
-The account creation process in the default [[passwordauth]] plugin could
-support account moderation by an administrator.  New account signups would
-go into a queue for approval by an administrator.
+The account creation process in the default [[plugins/passwordauth]] plugin
+could support account moderation by an administrator.  New account signups
+would go into a queue for approval by an administrator.
 
 (Random, potentially infeasible idea: save their edits and apply them if
 the account gets approved.)
 
-[[passwordauth]] could also support an "account creation password", as a
-simplistic anti-spam measure.  (Some wikis edited by a particular group use
+[[plugins/passwordauth]] could also support an "account creation password", as
+a simplistic anti-spam measure.  (Some wikis edited by a particular group use
 an account creation password as an "ask an existing member to get an account"
 system.)
 
