CIA moved from cia.navi.cx to cia.vc; update cia and ciauser shortcuts.

--- a/doc/shortcuts.mdwn
+++ b/doc/shortcuts.mdwn
@@ -28,8 +28,8 @@ This page controls what shortcut links the wiki supports.
 * [[shortcut name=perldoc url="http://perldoc.perl.org/search.html?q=%s"]]
 * [[shortcut name=whois url="http://reports.internic.net/cgi/whois?whois_nic=%s&type=domain"]]
 * [[shortcut name=cve url="http://cve.mitre.org/cgi-bin/cvename.cgi?name=%s"]]
-* [[shortcut name=cia url="http://cia.navi.cx/stats/project/%s"]]
-* [[shortcut name=ciauser url="http://cia.navi.cx/stats/user/%s"]]
+* [[shortcut name=cia url="http://cia.vc/stats/project/%s"]]
+* [[shortcut name=ciauser url="http://cia.vc/stats/user/%s"]]
 * [[shortcut name=flickr url="http://www.flickr.com/photos/%s"]]
 * [[shortcut name=zooomr url="http://www.zooomr.com/photos/%s"]] (Note: You have to include the username and number in here, such as bob/123455`.)
 
